// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBalanceHistory last item is now and have an amount equals to account balance 1`] = `
Array [
  Object {
    "date": 2018-01-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-04T04:00:00.000Z,
    "value": 31226687,
  },
  Object {
    "date": 2018-03-05T04:00:00.000Z,
    "value": 88865516,
  },
  Object {
    "date": 2018-03-06T04:00:00.000Z,
    "value": 96472884,
  },
  Object {
    "date": 2018-03-07T04:00:00.000Z,
    "value": 203117175,
  },
  Object {
    "date": 2018-03-08T04:00:00.000Z,
    "value": 204327427,
  },
  Object {
    "date": 2018-03-09T04:00:00.000Z,
    "value": 204538833,
  },
  Object {
    "date": 2018-03-10T04:00:00.000Z,
    "value": 265191211,
  },
  Object {
    "date": 2018-03-11T04:00:00.000Z,
    "value": 276377442,
  },
  Object {
    "date": 2018-03-12T04:00:00.000Z,
    "value": 302928278,
  },
  Object {
    "date": 2018-03-13T04:00:00.000Z,
    "value": 319424597,
  },
  Object {
    "date": 2018-03-14T04:00:00.000Z,
    "value": 319344021,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 328312655,
  },
]
`;

exports[`getBalanceHistory(*,30) returns an array of 30 items 1`] = `
Array [
  Object {
    "date": 2018-02-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 1177540,
  },
]
`;

exports[`getBalanceHistory(*,365) works as well 1`] = `
Array [
  Object {
    "date": 2017-07-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-12T04:00:00.000Z,
    "value": 17247972,
  },
  Object {
    "date": 2018-03-13T04:00:00.000Z,
    "value": 10566148,
  },
  Object {
    "date": 2018-03-14T04:00:00.000Z,
    "value": 77400431,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 104030073,
  },
]
`;

exports[`getBalanceHistorySum with lot of accounts 1`] = `
Array [
  Object {
    "date": 2018-03-06T04:00:00.000Z,
    "value": 5939444340,
  },
  Object {
    "date": 2018-03-07T04:00:00.000Z,
    "value": 6882358096,
  },
  Object {
    "date": 2018-03-08T04:00:00.000Z,
    "value": 8057787117,
  },
  Object {
    "date": 2018-03-09T04:00:00.000Z,
    "value": 9658749578,
  },
  Object {
    "date": 2018-03-10T04:00:00.000Z,
    "value": 10951938807,
  },
  Object {
    "date": 2018-03-11T04:00:00.000Z,
    "value": 12687078558,
  },
  Object {
    "date": 2018-03-12T04:00:00.000Z,
    "value": 14217696062,
  },
  Object {
    "date": 2018-03-13T04:00:00.000Z,
    "value": 16089492225,
  },
  Object {
    "date": 2018-03-14T04:00:00.000Z,
    "value": 18411411135,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 19482621731,
  },
]
`;

exports[`getBalanceHistorySum works with one account and is identically to that account history 1`] = `
Array [
  Object {
    "date": 2018-03-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T04:00:00.000Z,
    "value": 72757734,
  },
  Object {
    "date": 2018-03-10T04:00:00.000Z,
    "value": 161195370,
  },
  Object {
    "date": 2018-03-11T04:00:00.000Z,
    "value": 277721122,
  },
  Object {
    "date": 2018-03-12T04:00:00.000Z,
    "value": 350351680,
  },
  Object {
    "date": 2018-03-13T04:00:00.000Z,
    "value": 350327238,
  },
  Object {
    "date": 2018-03-14T04:00:00.000Z,
    "value": 397210495,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 432551713,
  },
]
`;
